docs: :notebook:  revise README.md

--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,10 @@ Thumbs.db
 
 
 ### Project-specific ###
+# git secret
+.gitsecret/keys/random_seed
+!*.secret
+signate.json
+
+# data
+**/data/*.[ct]sv
