--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
 signate
+# for prod
+python-dotenv
+tqdm
+# for dev
+black
+flake8
+loguru
+pysnooper
+# for test
+pytest
+pytest-cov
+pytest-datadir
+pytest-mock
+pytest-xdist[psutil]
+# for doc
+sphinx
+sphinx-rtd-theme
