feat: :+1:  introduce PyTorch-Lightning

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,6 @@
 if [ -d ./venv ]; then
     source ./venv/bin/activate
 fi
+
+export GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1
+export GRPC_PYTHON_BUILD_SYSTEM_ZLIB=1
