--- a/_template/Makefile
+++ b/_template/Makefile
@@ -14,7 +14,7 @@ OPEN_TARGET :=
 COMPETITION_ID := 102
 OPTS :=
 .DEFAULT_GOAL := default
-.PHONY: default init download hide reveal start open format lint test submit clean prune help
+.PHONY: default init download hide reveal start open format lint submit clean prune help
 
 default: ## 常用
 
@@ -22,11 +22,11 @@ init: reveal download ; ## 構築
 	pip install -r requirements.txt
 	lefthook install
 	direnv allow
-	if [ $(OS_NAME) = "Darwin" ]; then say "The initialization process is complete." ; fi
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The initialization process is complete." ; fi
 
 download: ## 取得
 	echo "TODO: Not Implemented Yet!"
-	if [ $(OS_NAME) = "Darwin" ]; then say "The download process is complete." ; fi
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The download process is complete." ; fi
 
 hide: ## 秘匿
 	git secret hide -v
@@ -34,38 +34,34 @@ hide: ## 秘匿
 reveal: ## 暴露
 	git secret reveal -v
 
-start: ## 開始
-	echo "TODO: Not Implemented Yet!"
-	if [ $(OS_NAME) = "Darwin" ]; then say "The process is started." ; fi
+start: format lint ; ## 開始
+	python main.py
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The process is complete." ; fi
 
 open: ## 閲覧
 	echo "TODO: Not Implemented Yet!"
-	# if [ $(OS_NAME) = "Darwin" ]; then open ${OPEN_TARGET} ; fi
+	# @if [ $(OS_NAME) = "Darwin" ]; then open ${OPEN_TARGET} ; fi
 
 format: ## 整形
 	black $(OPTS) .
-	if [ $(OS_NAME) = "Darwin" ]; then say "The test process is complete." ; fi
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The format process is complete." ; fi
 
 lint: ## 検証
 	flake8 $(OPTS) .
-	if [ $(OS_NAME) = "Darwin" ]; then say "The test process is complete." ; fi
-
-test: ## 試験
-	echo "TODO: Not Implemented Yet!"
-	if [ $(OS_NAME) = "Darwin" ]; then say "The test process is complete." ; fi
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The lint process is complete." ; fi
 
 submit: ## 投稿
 	echo "TODO: Not Implemented Yet!"
 	# signate submit -competition-id=$(COMPETITION_ID) data/submit.tsv --note="blah blah blah"
-	if [ $(OS_NAME) = "Darwin" ]; then say "The submit process is complete." ; fi
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The submit process is complete." ; fi
 
 clean: ## 掃除
 	echo "TODO: Not Implemented Yet!"
-	if [ $(OS_NAME) = "Darwin" ]; then say "The cleanup process is complete." ; fi
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The cleanup process is complete." ; fi
 
 prune: ## 破滅
 	$(CMD_DOCKER) system prune --all --force --volumes
-	if [ $(OS_NAME) = "Darwin" ]; then say "The pruning process is complete." ; fi
+	@if [ $(OS_NAME) = "Darwin" ]; then say "The pruning process is complete." ; fi
 
 help: ## 助言
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
