--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,15 @@
 {
   "cSpell.words": [
+    "ckpt",
     "commitizen",
+    "dataloaders",
+    "MNIST",
+    "optim",
+    "overfit",
     "sforzando",
     "sfz",
-    "signate"
+    "signate",
+    "torchvision"
   ],
   "esbonio.sphinx.confDir": ""
 }
